# stellardeck

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  autoflow.js  constants.js  deckset-parser.js  diagnostics.js  forge.config.js  package-lock.json  package.json  playwright.config.js  presenter.html  print-mode.js  slides2.js  viewer.html
css/: chrome.css  layout.css  presenter.css  themes.css
demo/: autoflow.md  bean-to-bar-chocolate.md  getting-started.md  hand-balancing.md  kitchen-sink.md  vibe-coding.md
docs/: autoflow-plan.md  autoflow-rules.md  comparison.md  format-spec.yaml  launch-plan.md  roadmap.md  skill-stellardeck-spec.md  tool-comparison.md
electron/: main.js  preload.js
embed/: autoflow-examples.html  playground.html  stellar-embed.js
js/: command-palette.js  commands.js  context-menu.js  desktop.js  diagnostics-panel.js  diagrams.js  dimensions.js  fittext.js  fullscreen.js  grid.js  images.js  keyboard.js  main.js  math.js  path-utils.js  pdf-export.js  presenter.js  qr.js  quick-open.js  reload.js  render.js  sidebar-diagnostics.js  sidebar-theme.js  sidebar.js  sidecar.js  state.js  tabs.js  tauri.js  themes.js  toast.js  toolbar.js  welcome.js
scripts/: analyze-style.js  assets-mapping.json  audit-themes.js  autoflow-docs.js  capture-bento.js  dedupe-images.py  dev-server.py  export-pptx.js  export.js  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  project.rs  protocol.rs
src-tauri/src/commands/: export.rs  files.rs  mod.rs  recent.rs  watcher.rs  window.rs
(+106 files in other folders)
