[package]
name = "stellardeck"
version = "0.1.0"
description = "Markdown presentations that feel native"
authors = ["Paulo Silveira"]
license = "MIT"
repository = "https://github.com/peas/stellardeck"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
urlencoding = "2"
notify-debouncer-mini = "0.5"
notify = "7"
tauri-plugin-mcp-bridge = "0.10"
tokio = { version = "1", features = ["sync"] }
tauri-plugin-window-state = "2"
dirs = "6"
